--- a/contact/index.html
+++ b/contact/index.html
@@ -15,7 +15,7 @@
 For more details please contact Jibi Paul George
 Phone: &#43;61402519608, &#43;61430626559 Email: adelaideapostolicchurch@gmail.com
 You can also use the contact form to reach us.
-" />
+Get some honey " />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://adelaidechurch.github.io/contact/" />
 <meta property="og:image" content="https://adelaidechurch.github.io/" />
@@ -31,7 +31,7 @@ You can also use the contact form to reach us.
 For more details please contact Jibi Paul George
 Phone: &#43;61402519608, &#43;61430626559 Email: adelaideapostolicchurch@gmail.com
 You can also use the contact form to reach us.
-"/>
+Get some honey "/>
 <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
 		<link rel="stylesheet" href="//cdn.plyr.io/3.4.5/plyr.css" integrity="sha384-JqfplAQ7gnCzjJ6j4zjffZi4KkVBkO/+vvvL5Ax4tzvCrQ8sQVBtjoHY3z3WmDDh" crossorigin="anonymous">
 		
@@ -130,30 +130,33 @@ Email: adelaideapostolicchurch@gmail.com</p>
 <p>You can also use the contact form to reach us.</p>
 
 
-	<div class="box">
-		<form method="POST" action="https://formspree.io/">
-			<div class="row uniform 50%">
-				<div class="6u 12u(mobilep)">
-					<input type="text" name="name" id="name" value="" placeholder="Name" />
-				</div>
-				<div class="6u 12u(mobilep)">
-					<input type="email" name="_replyto" id="email" value="" placeholder="Email" />
-				</div>
+	<form name="contact" method="POST" action="/contact_thanks" netlify-honeypot="special_email" netlify>
+		<div class="hpot">
+			<label>Get some honey <input name="special_email" /></label>
+		</div>
+		<div class="row uniform 50%">
+			<div class="6u 12u(mobilep)">
+	    	<input type="text" name="name" placeholder="Your name">
+	  	</div>
+			<div class="6u 12u(mobilep)">
+	    	<input type="email" name="email" placeholder = "Email address">
+	  	</div>
+		</div>
+		<div class="row uniform 50%">
+			<div class="12u">
+				<textarea name="message" placeholder="Enter your message" rows="6"></textarea>
 			</div>
-			<div class="row uniform 50%">
-				<div class="12u">
-					<textarea name="message" id="message" placeholder="Enter your message" rows="6"></textarea>
-				</div>
+		</div>
+		<div class="row uniform">
+			<div class="12u">
+				<ul class="actions align-center">
+	  			<li>
+						<input type="submit" value="Send" />
+					</li>
+				</ul>
 			</div>
-			<div class="row uniform">
-				<div class="12u">
-					<ul class="actions align-center">
-						<li><input type="submit" value="Send Message" /></li>
-					</ul>
-				</div>
-			</div>
-		</form>
-	</div>
+		</div>
+	</form>
 
 
 
